--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<div class="my-task">
-					<h3>任务详情</h3>
+					<h3> <%= @task.name %></h3>
 					<hr class="my-line">
 				</div>
 			</div>
@@ -38,19 +38,10 @@
 				</ul>
 			</div>
 
-			<!--************************************************************************************************************-->
 
-			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 input-append date form_datetime">
-				<span class="datepicker">
-					<% if @task.end_time.present? %>
-					<input size="9" type="text" value="<%= @task.end_time %>" id="endTime" readonly>
-					<% else %>
-					<input size="9" type="text" value="" id="endTime" placeholder="截止时间" readonly>
-					<% end %>
-				</span>
-				<span class="add-on pull-right"><i class="icon-th hidden"></i></span>
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+				<input type="text" value="<%= @task.end_time || '截止时间' %>" readonly class="form_datetime" >
 			</div>
-			<!--************************************************************************************************************-->
 
 			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
 				<button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -89,9 +80,9 @@
 		</div>
 		<div class="row task-content">
 			<div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12 task-description">
-				<h4> <%= @task.name %></h4>
-				<%= @task.description %>
+				<p><%= @task.description || "添加描述" %><p>
 			</div>
+			
 			<div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
 				<div class="tags tags-list">
 					<% @task.tag_list.each do |tag| %>
@@ -127,8 +118,11 @@
 <script type="text/javascript">
 
 		$(function(){
+			$("#taskEndTime").click(function(){
+				$(".form_datetime").click();
+			});
 			$(".form_datetime").datetimepicker({
-				format: "yyyy/mm/dd",
+				format: "yyyy-mm-dd",
 				viewSelect: 2,
 				minView: 2,
 				pickerPosition: 'bottom-left',
