--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -288,3 +288,11 @@ input.form_datetime {
   border:0px;
   background-color: #fbffff;
 }
+
+
+//评论
+#commentForm {
+  .form-actions {
+    margin: 0px;
+  }
+}
