--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="sidebar" id="sidebar">
+<div class="sidebar" >
   <script type="text/javascript">
     try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
   </script>
@@ -22,14 +22,14 @@
       <% end %>
     </li>
 
-    <li id="taskListMenuLi" class="<%= 'active' if params[:controller] == "training_platform/task_categories" || params[:controller] == "training_platform/tasks"%>">
+    <li id="taskListMenuLi" class="open <%= 'active' if params[:controller] == "training_platform/task_categories" || params[:controller] == "training_platform/tasks"%>">
       <a href="#" class="dropdown-toggle">
         <i class="icon-tasks"></i>
         <span class="menu-text"> 任务列表 </span>
         <% if @project.task_categories.present? %><b class="arrow icon-angle-down"></b><% end %>
       </a>
       <% if @project.task_categories.present? %>
-        <ul class="submenu">
+        <ul class="submenu" style="display: block;">
           <% @project.task_categories.each do |tc|%>
             <li>
               <%= link_to(training_platform_project_task_category_path(tc, project_id: @project.id)) do%>
@@ -42,14 +42,14 @@
       <% end %>
     </li>
 
-    <li class="<%= 'active' if params[:controller] == "training_platform/users" && params[:s] != "my" %>">
+    <li class="open <%= 'active' if params[:controller] == "training_platform/users" && params[:s] != "my" %>">
       <a href="javascript:void(0);" class="dropdown-toggle">
         <i class="icon-group"></i>
         <span class="menu-text"> 团队成员 </span>
         <% if @project.users.present? %><b class="arrow icon-angle-down"></b><% end %>
       </a>
       <% if @project.users.present? %>
-        <ul class="submenu">
+        <ul class="submenu" style="display: block;">
           <% @project.users.each do |member|%>
             <li>
               <%= link_to(training_platform_project_user_path(member, project_id: @project.id)) do %>
@@ -71,49 +71,34 @@
 
     <div class="sidebar-shortcuts" id="sidebar-shortcuts">
       <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-        <!-- <li class="<%= 'active' if params[:controller] == "training_platform/task_categories"%>">
-          <%= link_to new_training_platform_project_task_category_path(@project.id), remote: true do %>
-            <span class="glyphicon glyphicon-plus"></span>
-            <span class="menu-text">任务列表</span>
+        <span class="btn btn-success btn-sm tooltip-success" data-rel="tooltip" data-placement="bottom" title="新建任务列表">
+          <%= link_to( new_training_platform_project_task_category_path(@project.id),  "data-placement" => "opt", format: :js, remote: true) do %>
+          <i class="icon-tasks" style="color:#fff"></i>
           <% end %>
-        </li> -->
+        </span>
 
-        <div class="sidebar-shortcuts" id="sidebar-shortcuts">
-          <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-          <span class="btn btn-success btn-sm tooltip-success" data-rel="tooltip" data-placement="bottom" title="新建任务列表">
-              <%= link_to( new_training_platform_project_task_category_path(@project.id),  "data-placement" => "opt", format: :js, remote: true) do %>
-              <i class="icon-tasks" style="color:#fff"></i>
-              <% end %>
-          </span>
-            
-
-        <%#= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务", class: "btn btn-info") do %>
-          <!-- <i class="icon-plus"></i> -->
-        <%# end %>
         <span class="btn btn-warning btn-sm tooltip-warning" data-rel="tooltip" data-placement="bottom" title="邀请团队成员">
-            <%= link_to( new_training_platform_project_user_project_path, "data-toggle" => "tooltip", "data-placement" => "opt",  format: :js, remote: true) do %>
-            <i class="icon-group" style="color:#fff"></i>
-            <% end %>
+          <%= link_to( new_training_platform_project_user_project_path, "data-toggle" => "tooltip", "data-placement" => "opt",  format: :js, remote: true) do %>
+          <i class="icon-group" style="color:#fff"></i>
+          <% end %>
         </span>
         
         <span class="btn btn-danger btn-sm tooltip-error" data-rel="tooltip" data-placement="bottom" title="设置">
-            <%= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt") do %>
-            <i class="icon-cogs" style="color:#fff"></i>
-            <% end %>
+          <%= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt") do %>
+          <i class="icon-cogs" style="color:#fff"></i>
+          <% end %>
         </span>
       </div>
 
       <div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
         <span class="btn btn-success"></span>
 
-        <!-- <span class="btn btn-info"></span> -->
-
         <span class="btn btn-warning"></span>
 
         <span class="btn btn-danger"></span>
       </div>
-    </div><!-- #sidebar-shortcuts -->
-  </ul><!-- /.nav-list -->
+    </div>
+  </ul>
 
   <div class="sidebar-collapse" id="sidebar-collapse">
     <i class="icon-double-angle-left" data-icon1="icon-double-angle-left" data-icon2="icon-double-angle-right"></i>
