--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="sidebar" >
+<div class="sidebar" id="sidebar">
   <script type="text/javascript">
     try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
   </script>
@@ -43,7 +43,7 @@
     </li>
 
     <li class="open <%= 'active' if params[:controller] == "training_platform/users" && params[:s] != "my" %>">
-      <a href="javascript:void(0);" class="dropdown-toggle">
+      <a href="#" class="dropdown-toggle">
         <i class="icon-group"></i>
         <span class="menu-text"> 团队成员 </span>
         <% if @project.users.present? %><b class="arrow icon-angle-down"></b><% end %>
