--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row category">
 		<div class="title-bar">
-			<h4 class="text-center title">专业分类</h4>
+			<h4 class="text-center title">课程分类</h4>
 			<div class="line"></div>
 		</div>
 		<div class="search-course">
