user update flash

--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -6,7 +6,7 @@
 .flash-message {
   top: 200px;
   width: 100%;
-  position: absolute;
+  //position: absolute;
   .popover-content {
     text-align: center;
     font-size: 20px;
