--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -117,7 +117,7 @@
 				<div class="tags tags-list attachment-list">
 					<% @task.attachments.each do |attachment| %>
 					<span class="tag">
-						<%= link_to(attachment.content_file_name, download_training_platform_project_task_path(@project,@task,attachment: attachment.id)) %>
+						<%= link_to(attachment.content_file_name, download_training_platform_project_task_path(@project,@task,attachment: attachment.id),title: "下载") %>
 						<%= link_to("x", remove_attachment_training_platform_project_task_path(@project,@task,attachment: attachment.id) , class: "close", remote: true, format: :js, method: :delete) %>
 					</span>
 					<% end %>
