--- a/app/views/user/my_recruits.html.erb
+++ b/app/views/user/my_recruits.html.erb
@@ -25,7 +25,7 @@
               <% @recruits.each do |recruitment| %>
               <tr>
                 <td><%=link_to recruitment.name, recruitment_path(recruitment) %></td>
-                <td><%=image_tag recruitment.try(:company).try(:logo_url).present? ? recruitment.try(:company).try(:logo_url) : "0401_1.png" %></td>
+                <td><%=image_tag recruitment.try(:company).try(:logo_url).present? ? recruitment.try(:company).try(:logo_url) : "delo.jpg" , style: "max-height: 45px;" %></td>
                 <td><%=recruitment.try(:company).try(:name) %></td>
                 <td><%=recruitment.city %></td>
                 <td><span class="text-muted">已投简历</span></td>
