--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -101,7 +101,11 @@
 	display: inline;
 	list-style: none;
 	text-decoration: none;			
-	a{
+	a {
+		color: #6E6E6E;
+		padding: 5px 10px;
+	}
+	span {
 		color: #6E6E6E;
 		padding: 5px 10px;
 	}
