--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,3 +1,7 @@
 <li>
-  <%= link_to_unless current_page.first?, t('views.pagination.previous'), url, :rel => 'prev', :remote => remote , :class => "prev_page" %>
+  <% if current_page.first? %>
+    <span><%= t('views.pagination.previous').html_safe %></span>
+  <% else %>
+    <%= link_to_unless current_page.first?, t('views.pagination.previous'), url, :rel => 'prev', :remote => remote , :class => "prev_page" %>
+  <% end %>
 </li>
